force-app/main/default/objects/Product_Categories__c/Product_Categories__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Product Categories</label>
</CustomObject>