force-app/main/default/objects/Product_Categories__c/fields/Chart_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Chart_Color_Code__c</fullName>
    <label>Chart Color Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>