force-app/main/default/objects/Product_Categories__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>