force-app/main/default/objects/Product_Categories__c/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <inlineHelpText>Multiple Product Families separated by comm</inlineHelpText>
    <label>Product Families</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>