force-app/main/default/objects/Product_Categories__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Product_Families__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Chart_Color_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>